P5 E-learning/force-app/main/default/objects/TrailModulo__c/TrailModulo__c.object-meta.xml
<CustomObject>
    <label>TrailModulo</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>TrailModulo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrailsModulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>