P5 E-learning/force-app/main/default/objects/TrailModulo__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Modulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>TrailsModulos</relationshipLabel>
    <relationshipName>TrailsModulos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>