P5 E-learning/force-app/main/default/objects/TrailModulo__c/fields/PuntosTrail__c.field-meta.xml
<CustomField>
    <fullName>PuntosTrail__c</fullName>
    <label>PuntosTrail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>