P5 E-learning/force-app/main/default/objects/TrailModulo__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>TrailsModulos</relationshipLabel>
    <relationshipName>TrailsModulos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>