P5 E-learning/force-app/main/default/objects/TrailModulo__c/validationRules/Modulo_Activado.validationRule-meta.xml
<ValidationRule>
    <fullName>Modulo_Activado</fullName>
    <active>true</active>
    <description>El modulo debe estar activado para poder ser agregado a un trail</description>
    <errorConditionFormula>(!Modulo__r.Activado__c)</errorConditionFormula>
    <errorMessage>El modulo que quiere usar no esta Activado</errorMessage>
</ValidationRule>