P5 E-learning/force-app/main/default/objects/TrailModulo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trail__c</columns>
    <columns>Modulo__c</columns>
    <columns>PuntosTrail__c</columns>
    <columns>Duracion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>